--- a/website/index.html
+++ b/website/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
 <head>
+	
 	<meta charset="UTF-8">
 	<title>Jitao Sun Design</title>
 
@@ -47,7 +48,7 @@
     \__________/  |___|      |___| /___/              \___\  \_____________/        \____________/   \_____________|  |___|      |___|
 
 www.jitaosundesign.com 
-
+// last edit Apr 6 2016.
 -->
 
 
