--- a/website/index.html
+++ b/website/index.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html>
 <head>
-	
 	<meta charset="UTF-8">
 	<title>Jitao Sun Design</title>
 
@@ -35,20 +34,19 @@
 
 
 <!-- 
-		    ___    ___   _____________       ____             _____________          ____________    ___        ___    _____________
-		   |   |  |   | |             |     /    \           /             \        /            \  |   |      |   |  |              \
-		   |   |  |   | |____     ____|    /      \         |    ______    |       |    _________|  |   |      |   |  |    ______    |
-		   |   |  |   |      |   |        /   /\   \        |   /      \   |       |   |            |   |      |   |  |   |      |   |
-		   |   |  |   |      |   |       /   /  \   \       |   |      |   |       |   |_________   |   |      |   |  |   |      |   |
-		   |   |  |   |      |   |      /   /____\   \      |   |      |   |       |             \  |   |      |   |  |   |      |   |
-		   |   |  |   |      |   |     /              \     |   |      |   |        \________    |  |   |      |   |  |   |      |   |
-	___	   |   |  |   |      |   |    /    ________    \    |   |      |   |                 |   |  |   |      |   |  |   |      |   |
-   |   |___|   |  |   |      |   |   /   /          \   \   |    \_____/   |        _________|   |  |    \_____|   |  |   |      |   |
-   |           |  |   |      |   |  /   /            \   \  |              |       |             |  |              |  |   |      |   |
-    \__________/  |___|      |___| /___/              \___\  \_____________/        \____________/   \_____________|  |___|      |___|
+
+╋╋┏┳━━┳━━━━┳━━━┳━━━┓┏━━━┳┓╋┏┳━┓╋┏┓┏━━━┳━━━┓┏┓┏━━━┓
+╋╋┃┣┫┣┫┏┓┏┓┃┏━┓┃┏━┓┃┃┏━┓┃┃╋┃┃┃┗┓┃┃┃┏━┓┃┏━┓┣┛┃┃┏━━┛
+╋╋┃┃┃┃┗┛┃┃┗┫┃╋┃┃┃╋┃┃┃┗━━┫┃╋┃┃┏┓┗┛┃┗┛┏┛┃┃┃┃┣┓┃┃┗━━┓
+┏┓┃┃┃┃╋╋┃┃╋┃┗━┛┃┃╋┃┃┗━━┓┃┃╋┃┃┃┗┓┃┃┏━┛┏┫┃┃┃┃┃┃┃┏━┓┃
+┃┗┛┣┫┣┓╋┃┃╋┃┏━┓┃┗━┛┃┃┗━┛┃┗━┛┃┃╋┃┃┃┃┃┗━┫┗━┛┣┛┗┫┗━┛┃
+┗━━┻━━┛╋┗┛╋┗┛╋┗┻━━━┛┗━━━┻━━━┻┛╋┗━┛┗━━━┻━━━┻━━┻━━━┛
+
 
 www.jitaosundesign.com 
-// last edit Apr 6 2016.
+
+Last edited Apr 6 
+
 -->
 
 
